# dicore_lang

./: LICENSE  README.md
dicore_lang/dicore_lang/: CMakeLists.txt  main.cpp
dicore_lang/dicore_lang.xcodeproj/: project.pbxproj
dicore_lang/dicore_lang.xcodeproj/project.xcworkspace/xcuserdata/tahiruagbanwa.xcuserdatad/: UserInterfaceState.xcuserstate
dicore_lang/dicore_lang.xcodeproj/xcuserdata/tahiruagbanwa.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
dicore_lang/dicore_lang.xcodeproj/xcuserdata/tahiruagbanwa.xcuserdatad/xcschemes/: xcschememanagement.plist
dicore_lang/dicore_lang/backend/: compiler.cpp  compiler.h  main.cpp
dicore_lang/dicore_lang/compiler/: main.cpp
dicore_lang/dicore_lang/frontend/: ast.cpp  ast.h  lexer.cpp  lexer.h  parser.cpp  parser.h  token.cpp  token.h
dicore_lang/docs/: doc.html
